--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- LOADING ANGULARJS FROM LOCAL LIBRARY -->
-    <script type="text/javascript" src="lib/angular.js"></script>
+    <script type="text/javascript" src="./lib/angular.js"></script>
     <!-- <script type="text/javascript" src="lib/angular.min.js"></script> -->
 
     <!-- LOADING ANGULARJS FROM EXTERNAL CDN -->
